--- a/src/components/ui/user/navbar.css
+++ b/src/components/ui/user/navbar.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -9,20 +10,25 @@
 a {
   text-decoration: none;
 }
+
 li {
   list-style-type: none;
 }
+
 .navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 10vh;
   box-shadow: rgba(50, 50, 93, 0.23) 0px 30px 30px -20px;
-  /*box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;*/
 }
+
 .logo {
   font-size: 30px;
+  width: 8vh;
+  height: 8vh;
 }
+
 .nav-links {
   display: flex;
   justify-content: flex-end;
@@ -37,23 +43,28 @@ li {
   cursor: pointer;
   text-transform: capitalize;
 }
+
 .hero {
   text-align: center;
   margin-top: 15%;
 }
+
 .hero h1 {
   text-align: center;
   font-size: 80px;
 }
+
 .mobile-menu-icon {
   display: none;
 }
+
 button {
   border: none;
   text-decoration: none;
   font-size: 20px;
   background: none;
 }
+
 @media (max-width: 768px) {
   .logo {
     display: flex;
@@ -61,9 +72,11 @@ button {
     top: 15px;
     left: 35px;
   }
+
   .nav-links {
     display: none;
   }
+
   .nav-links-mobile {
     position: absolute;
     display: block;
@@ -75,17 +88,20 @@ button {
     width: 100%;
     background-color: white;
   }
+
   ul li {
     padding: 32px;
     width: 100%;
     transition: all 0.5s ease-in-out;
     text-align: center;
   }
+
   .mobile-menu-icon {
     position: absolute;
     display: block;
     right: 20px;
   }
+
   .hero h1 {
     font-size: 50px;
   }
