--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -2,7 +2,7 @@
     border-radius: 9px;
 
     font-weight: bold;
-    font-Size: 7vw;
+    font-size: 7vw;
     min-height: 3vh;
     min-width: 3vw;
     color: white;
