--- a/src/components/ui/user/styles.module.css
+++ b/src/components/ui/user/styles.module.css
@@ -1,11 +1,11 @@
 /* card styles */
 .card {
-    background: rgba(0, 0, 0, 0.28);
+    /* background: rgba(0, 0, 0, 0.28); */
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(9.3px);
     -webkit-backdrop-filter: blur(9.3px);
-    border: none;
+    /* border: none; */
     width: 200;
     cursor: grab;
 }
@@ -15,7 +15,7 @@
     box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
     height: 100%;
     opacity: 0.3;
-    background-color: transparent;
+    /* background-color: transparent; */
     position: relative;
     opacity: 1;
 }
@@ -27,5 +27,4 @@
 img {
     width: 100%;
     height: 100%;
-    border-radius: 2rem;
 }
