--- a/src/components/ui/SearchComponent.css
+++ b/src/components/ui/SearchComponent.css
@@ -1,10 +1,3 @@
-/* .input__search {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-} */
-
 .App {
     text-align: center;
     padding-top: 16px;
@@ -29,7 +22,7 @@
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: #F5F5F5;
 }
 
 .App-link {
@@ -57,7 +50,7 @@
     top: 31px;
     width: 500px;
     border: 1px solid #aaa;
-    background-color: #fff;
+    background-color: #F5F5F5;
     font-family: Helvetica, sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -86,5 +79,5 @@
 }
 
 .react-autosuggest__suggestion--highlighted {
-    background-color: #ddd;
+    background-color: #F5F5F5;
 }
