--- a/src/components/ui/user/navbar.css
+++ b/src/components/ui/user/navbar.css
@@ -1,108 +1,183 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
 a {
   text-decoration: none;
+  color: black;
+}
+.btn_nav {
+  border: none !important;
+  outline: none !important;
+  border-bottom: 1px solid black !important;
+}
+.navbar-bg {
+  width: 100%;
+  position: relative;
+  z-index: 100000000000000000000000000;
 }
 
-li {
-  list-style-type: none;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 10vh;
-  box-shadow: rgba(50, 50, 93, 0.23) 0px 30px 30px -20px;
-}
-
-.logo {
-  font-size: 30px;
-  width: 8vh;
-  height: 8vh;
-}
-
-.nav-links {
+.sb__navbar {
   display: flex;
   justify-content: space-between;
-  width: 75%;
+  align-items: center;
+  background-color: white;
+  border-radius: 0.5rem;
+  border: 1px solid #8000e5;
+  margin: 0.3rem 0.5rem;
+  padding: auto 2rem;
 }
 
-.nav-links li {
-  color: black;
-  font-size: 20px;
-  padding: 10px 20px;
-  margin: 0 10px;
+.sb__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sb__navbar-links_logo img {
+  padding: 0.7rem 1.5rem;
+  width: 80%;
+  height: auto;
+}
+
+.sb__navbar-links_container {
+  display: flex;
+  flex-direction: row;
+  margin-right: 2rem;
+}
+
+.sb__navbar-button {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 2rem;
+  border-radius: 1rem;
+}
+
+.sb__navbar-links_container p,
+.sb__navbar-button p,
+.sb__navbar-menu_container p {
+  color: white;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 25px;
+  margin: 0 1rem;
   cursor: pointer;
-  text-transform: capitalize;
 }
 
-.hero {
-  text-align: center;
-  margin-top: 15%;
+.sb__navbar-button button,
+.sb__navbar-menu_container button {
+  padding: 0.5rem 1rem;
+  color: #8000e5;
+  background-color: white;
+  border: 1px solid #8000e5;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 25px;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
-.hero h1 {
-  text-align: center;
-  font-size: 80px;
+.sb__navbar-menu {
+  margin-left: 1rem;
+  display: none;
+  position: relative;
+  margin-right: 2rem;
 }
 
-.mobile-menu-icon {
+.sb__navbar-menu svg {
+  cursor: pointer;
+}
+
+.sb__navbar-menu_container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: column;
+  text-align: end;
+  background-color: white;
+  padding: 2rem;
+  position: absolute;
+  right: 0;
+  top: 40px;
+  margin-top: 1rem;
+  min-width: 170px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.sb__navbar-menu_container p {
+  margin-top: 0.5rem;
+}
+
+.sb__navbar-menu_container-links-sign {
   display: none;
 }
 
-button {
-  border: none;
-  text-decoration: none;
-  font-size: 20px;
-  background: none;
+.scale-up-center {
+  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
+    both;
+  animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
-@media (max-width: 768px) {
-  .logo {
-    display: flex;
-    position: absolute;
-    top: 15px;
-    left: 35px;
+@-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-animation: scale(0.5);
+    transform: scale(0.5);
   }
 
-  .nav-links {
+  100% {
+    -webkit-animation: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes scale-up-center {
+  0% {
+    -webkit-animation: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  100% {
+    -webkit-animation: scale(1);
+    transform: scale(1);
+  }
+}
+
+/*---------responsive----------------------------*/
+
+@media screen and (max-width: 1220px) {
+  .sb__navbar-links_container {
     display: none;
   }
 
-  .nav-links-mobile {
-    position: absolute;
+  .sb__navbar-menu {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .sb__navbar {
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .sb__navbar {
+    padding: 0.5rem;
+  }
+
+  .sb__navbar-links_logo img {
+    padding: 0.4rem 1rem;
+  }
+
+  .sb__navbar-button {
+    display: none;
+  }
+
+  .sb__navbar-menu_container {
+    top: 60px;
+  }
+
+  .sb__navbar-menu_container-links-sign {
     display: block;
-    list-style: none;
-    box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-    left: 0;
-    top: 10%;
-    transition: all 0.5s ease-in-out;
-    width: 100%;
-    background-color: white;
-  }
-
-  ul li {
-    padding: 32px;
-    width: 100%;
-    transition: all 0.5s ease-in-out;
-    text-align: center;
-  }
-
-  .mobile-menu-icon {
-    position: absolute;
-    display: block;
-    right: 20px;
-  }
-
-  .hero h1 {
-    font-size: 50px;
   }
 }
