--- a/src/components/ui/user/styles.module.css
+++ b/src/components/ui/user/styles.module.css
@@ -1,87 +1,86 @@
 /* card styles */
 .card {
-    /* background: rgba(0, 0, 0, 0.28); */
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(9.3px);
-    -webkit-backdrop-filter: blur(9.3px);
-    /* border: none; */
-    width: 200;
+  /* background: rgba(0, 0, 0, 0.28); */
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(9.3px);
+  -webkit-backdrop-filter: blur(9.3px);
+  /* border: none; */
+  width: 200;
 }
 
 .card:hover {
-    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
-    transform: scale(1.10, 1.10);
-    height: 100%;
-    opacity: 0.3;
-    /* background-color: transparent; */
-    position: relative;
-    opacity: 1;
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.1, 1.1);
+  height: 100%;
+  opacity: 0.3;
+  /* background-color: transparent; */
+  position: relative;
+  opacity: 1;
 }
-
 
 /* card styles 2 */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-    padding: 1rem 0;
-    background: #f9f9fb;
+  padding: 1rem 0;
+  background: #f9f9fb;
 }
 
 .card {
-    width: 300px;
-    display: inline-block;
-    margin: 1rem;
-    border-radius: 4px;
-    box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, .05), 0 1px 2px 0 rgba(0, 0, 0, .2);
-    transition: all 0.2s ease;
-    background: #fff;
-    position: relative;
-    overflow: hidden;
+  width: 300px;
+  display: inline-block;
+  margin: 1rem;
+  border-radius: 4px;
+  box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, 0.05), 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease;
+  background: #fff;
+  position: relative;
+  overflow: hidden;
 }
 
 .card:hover,
 .card.hover {
-    transform: translateY(-4px);
-    box-shadow: 0 4px 25px 0 rgba(0, 0, 0, .3), 0 0 1px 0 rgba(0, 0, 0, .25);
+  transform: translateY(-4px);
+  box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.3), 0 0 1px 0 rgba(0, 0, 0, 0.25);
 }
 
 .card:hover .card-content,
 .card.hover .card-content {
-    box-shadow: inset 0 3px 0 0 #ccb65e;
-    border-color: #ccb65e;
+  box-shadow: inset 0 3px 0 0 #ccb65e;
+  border-color: #ccb65e;
 }
 
 .card:hover .card-img .overlay,
 .card.hover .card-img .overlay {
-    background-color: rgba(25, 29, 38, .85);
-    transition: opacity 0.2s ease;
-    opacity: 1;
+  background-color: rgba(25, 29, 38, 0.85);
+  transition: opacity 0.2s ease;
+  opacity: 1;
 }
 
 .card-img {
-    position: relative;
-    height: 224px;
-    width: 100%;
-    background-color: #fff;
-    transition: opacity 0.2s ease;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  position: relative;
+  height: 224px;
+  width: 100%;
+  background-color: #fff;
+  transition: opacity 0.2s ease;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .card-img .overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
